--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,58 @@
-# This is a basic workflow to help you get started with Actions
+name: github pages
 
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
+# masterブランチにプッシュしたときjobsに記述した操作を行う
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+    - master
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  build-deploy:
+    # ubuntu OS を仮想マシン上に用意する
+    runs-on: ubuntu-18.04
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    # Node.js環境のセットアップを行う
+    - name: setup node
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    # npm install の際にキャッシュを使うよう設定
+    - name: Cache dependencies
+      uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
+    # package.jsonに基づき依存パッケージをインストールする
+    - name: install
+      run: npm install --frozen-lockfile
+
+    # Next.jsアプリをビルドする
+    # プロジェクトルート直下に.nextディレクトリができる
+    - name: build
+      run: npm run build
+
+    # 静的なHTMLとしてNext.jsアプリを生成する
+    # プロジェクトルート直下にoutディレクトリができる
+    # そのなかに、HTMLファイル群と、それらが読み込むJSファイル群を収めた_nextディレクトリがある
+    - name: export
+      run: npm run export
+
+    # しかしGitHub Pagesの仕様として_から始まるディレクトリが見えず404となる
+    # つまりHTMLからJSを読み込めない
+    # これを回避するために.nojekyllファイルをoutディレクトリに作る
+    - name: add nojekyll
+      run: touch ./out/.nojekyll
+
+    # gh-pagesブランチにoutディレクトリの中身をプッシュする
+    # gh-pagesブランチは自動的に作成される
+    - name: deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./out
